On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   src/app/app.component.css
	modified:   src/app/components/facebook-signin/facebook-signin.component.html
	modified:   src/app/components/google-signin/google-signin.component.ts
	modified:   src/app/components/lock-checkbox/lock-checkbox.component.ts
	modified:   src/app/components/nav-bar/nav-bar.component.html
	modified:   src/app/services/auth/auth.service.ts
	modified:   src/app/services/auth/social-auth.service.ts
	modified:   src/app/views/login/login.component.html
	modified:   src/app/views/login/login.component.ts
	modified:   src/config/tokens/oauth-conection.token.ts

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -35,3 +35,10 @@
     background-color: rgba(40, 40, 40, 0.2);
     backdrop-filter: blur(0.2rem);
 }
+
+/* @media (orientation: landscape) {
+    
+}
+@media (orientation: portrait) {
+    
+} */
